// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb Harmonised Long renders correctly 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-harmonised"
  data-ecl-auto-init="BreadcrumbHarmonised"
  data-ecl-breadcrumb-harmonised="true"
>
  <ol
    class="ecl-breadcrumb-harmonised__container"
  >
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__segment--ellipsis"
      data-ecl-breadcrumb-harmonised-ellipsis=""
    >
      <button
        aria-label="Click to expand"
        class="ecl-button ecl-button--ghost ecl-breadcrumb-harmonised__ellipsis"
        data-ecl-breadcrumb-harmonised-ellipsis-button=""
        type="button"
      >
        …
      </button>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        Organisational structure
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        How the Commission is organised
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb Harmonised Long renders correctly with extra attributes 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-harmonised"
  data-ecl-auto-init="BreadcrumbHarmonised"
  data-ecl-breadcrumb-harmonised="true"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <ol
    class="ecl-breadcrumb-harmonised__container"
  >
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__segment--ellipsis"
      data-ecl-breadcrumb-harmonised-ellipsis=""
    >
      <button
        aria-label="Click to expand"
        class="ecl-button ecl-button--ghost ecl-breadcrumb-harmonised__ellipsis"
        data-ecl-breadcrumb-harmonised-ellipsis-button=""
        type="button"
      >
        …
      </button>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        Organisational structure
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        How the Commission is organised
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb Harmonised Long renders correctly with extra class names 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-harmonised custom-class custom-class--test"
  data-ecl-auto-init="BreadcrumbHarmonised"
  data-ecl-breadcrumb-harmonised="true"
>
  <ol
    class="ecl-breadcrumb-harmonised__container"
  >
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__segment--ellipsis"
      data-ecl-breadcrumb-harmonised-ellipsis=""
    >
      <button
        aria-label="Click to expand"
        class="ecl-button ecl-button--ghost ecl-breadcrumb-harmonised__ellipsis"
        data-ecl-breadcrumb-harmonised-ellipsis-button=""
        type="button"
      >
        …
      </button>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="expandable"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        Organisational structure
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        How the Commission is organised
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb Harmonised Simple renders correctly 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-harmonised"
  data-ecl-breadcrumb-harmonised="true"
>
  <ol
    class="ecl-breadcrumb-harmonised__container"
  >
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb Harmonised Simple renders correctly with extra attributes 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-harmonised"
  data-ecl-breadcrumb-harmonised="true"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <ol
    class="ecl-breadcrumb-harmonised__container"
  >
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb Harmonised Simple renders correctly with extra class names 1`] = `
<nav
  aria-label="You are here:"
  class="ecl-breadcrumb-harmonised custom-class custom-class--test"
  data-ecl-breadcrumb-harmonised="true"
>
  <ol
    class="ecl-breadcrumb-harmonised__container"
  >
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        Home
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      class="ecl-breadcrumb-harmonised__segment"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
        href="/example"
      >
        About the European Commission
      </a>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
        focusable="false"
        role="presentation"
      >
        <use
          xlink:href="/icons.svg#ui--corner-arrow"
        />
      </svg>
    </li>
    <li
      aria-current="page"
      class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
      data-ecl-breadcrumb-harmonised-item="static"
    >
      News
    </li>
  </ol>
</nav>
`;
